# Automata-Applications

./: CMakeLists.txt
include/: Delta.h  IDelta.h  ILambda.h  Lambda.h  Minimal.h  Transducer.h  macros.h
src/: CMakeLists.txt  Delta.cpp  Lambda.cpp  Minimal.cpp  StateSignature.cpp  Transducer.cpp  main.cpp
test/: CMakeLists.txt  test_Delta.cpp  test_Lambda.cpp  test_Minimal.cpp  test_StateSignature.cpp  test_Transducer.cpp  test_example.cpp
